--- a/style.css
+++ b/style.css
@@ -310,4 +310,11 @@ input, textarea, button {
 html {
   scroll-behavior: auto !important;
 }
+.img-produto {
+  width: 100%;
+  height: 140px;
+  object-fit: cover;
+  border-radius: 12px;
+  margin-bottom: 10px;
+}
 
