--- a/style.css
+++ b/style.css
@@ -312,14 +312,17 @@ html {
 }
 .card-topo {
   display: flex;
+  flex-direction: row;      /* GARANTE LADO A LADO */
   align-items: center;
-  gap: 10px;
-  margin-bottom: 8px;
+  gap: 12px;
+  margin-bottom: 10px;
 }
+
 .img-produto {
-  width: 60px;
-  height: 60px;
+  width: 65px;
+  height: 65px;
   object-fit: cover;
-  border-radius: 10px;
+  border-radius: 12px;
   flex-shrink: 0;
 }
+
